@@ -1,10 +1,8 @@
 DIST renderdoc-1.2.tar.gz 41147527 SHA256 5050be7eea5f5721f530ad3d58ac80b3d47e1b81347e6551e4281bd06cf97a3a SHA512 98df7bd6b7fe9d488620027eab50b5e1be53644644969049ed5349d5337a946d2315363b148bc9fad6133c2690f7961070f732d9fedef33b9df5fd7f18ce439c WHIRLPOOL 05409e32afb82bfa90494e2d7c755975040733202de5d76e8a8b4bf603530f6b0cef220c57daf423a2daf72c2270db92c6148246f3b7b67f32f3cec88ce61b46
+DIST renderdoc-1.5.tar.gz 42153749 SHA256 add9d6af2f2fe3884cc813f5ee613acec4f2ffc10ccee67cd8d1e3de83537e29 SHA512 771d406a7a946a8ff34f1466feaf33ec0271f48d4ba06b37c59e011ffaaede3b8f608c8de4145b3a40259d643f33041f721f5aadaffefbe5ae5116399485049d WHIRLPOOL 31f94efa9853ab58e7c0f420214ff1a4d8e4928dcb21d28a6d3269d7a192e024b95877991aad01e7b800294df9a7992658993d88f5cb12100ad57e9e98b87937
 DIST renderdoc_swig_modified-6.zip 6015826 SHA256 c486b9f4fa537b00085890f592ffa5aa4be75153a701f8602105b0f2af1d46d9 SHA512 380760fcd4ec6fe3f2571ac0ce84c8cbd60a413ee5b7679beed4a87dc78ca6a3eef5932d8198476e81bbb04d2b10bfacfb7b94c0508cfaeb358f4033c7b58376 WHIRLPOOL c55a5d367ed2a66a55d472392c52ca3f44dae8c6e604e281272a68871c22fda9f4c4880989eac067e0bfcda7d27917e0f292223fdf7bf2477f30c71f332a724a
-DIST v1.0.tar.gz 39253525 SHA256 ab43370a97ee7c35b7336b9b8c90d3621e340b48bb2a9e75636bb49ded0825ec SHA512 58f32805fd7677586ba93fdad63675a5ad182c5c44f5048375494de08d2fd06a024293af3eb581a764f94d768d2c1483146e2dc86f93da4496fb2b4007de7ce1 WHIRLPOOL 78eb1e660f6a07856ace4ed5b5e07188fa5ecdb79689e556b860d51f5faa952f3e5dd4daaed39b590203bd1f05b980a3d453eeda63b5d928035f09bac6cb061f
-DIST v1.1.tar.gz 39779466 SHA256 3ee45f892f6020cadb1b5604021122fa812ac807241065336db092c98472087c SHA512 40486cfcd75227a68b34b3fcf3e94a527eb23e79c842c7c88a70172d1d14d4c13de937310a3923573818967e341913fd5c6d14c1b3e12328eadfbcf91a566d40 WHIRLPOOL fd61d5998f4690054343c003258c3dafd27178d90914537915d7123812ded181c9c191c34dc95489a8f32c7f9e9d13ca37a7e53d42eadb141eab106c3e92c27c
-EBUILD renderdoc-1.0.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
-EBUILD renderdoc-1.1.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
 EBUILD renderdoc-1.2.ebuild 1223 SHA256 c386a618e3f0c0e0d18ebe98e3a6b5ccd35e887a14cdc094e0f39b99da279ba0 SHA512 183ab9a3570f37fe1f1b67462879a86956596cfdc9bd6d7be5bbe67b5f3bdf70b1e398e0cb87fa896c954115f6ea4ea21a349ed47a7f80f30bb90aa75eee8fab WHIRLPOOL dce6dcdea06d4b1ea84ed29cd5a04441fc5f2c5e2c0dbd32c1524ec44ab0061a8c21fe60645d4352a529b2239de2e96357a815ff394b68e9ffa8e8d7856bd410
+EBUILD renderdoc-1.5.ebuild 1299 SHA256 7b6517e9413e1e14e5f7a94f87b399843c2ee2dae947e1cfad948b167f193e83 SHA512 83a6d1ebd754595e1fa4d3d29521bda470766c41acbe10461954f2c64194deae1ad78e2bde59a56cd8e125f585939d93202334dd1b383bf22d4c079316230101 WHIRLPOOL 800783dfcba407d0eca8918d80d60fba9af0b5994a88b1e1b50a84bd4a62d540060225fff02455745250d5058a4721721bf3ec56030c681a388c7712edf5a3ee
 EBUILD renderdoc-9999.ebuild 888 SHA256 5a5c10e0ff74065dd2dd2016c888d15a890d2c12482bb5b7c68c971ce78946d9 SHA512 54959e6b37aa5c8091c1693dadbd3b03fb37b9222a8dfd1751b8dd8f3e93a71cf1d7036320cc08fda4c1e9efaee60d095a5289ddbc8242fca2b4fafc8077341a WHIRLPOOL e209314a3fbff6fe2809cb4ba734821e6d49a69dbe9ffee2a5c60d4feeb946e9f3f4b27aa15ccc3e347631771acea18cc51f4186cda9cec554dbd22917ddc944
-MISC ChangeLog 949 SHA256 64acdd9c9e10c909f93d9275dd39547c1865fc90390e3f9fcf7784df30e28658 SHA512 8d6b3fec3ad9c7236c1dfb1bb474bc74b74d78e947d0a0ef5c2a9a6ced2656ee2f52f6492776a6d57ed5b5a16578626fe0b929980908a89bfabcd380e04d2f7e WHIRLPOOL 80b7b39d733aa6b5662ea0c896783d2abfd9353e468699520f33747004faab19e39b581735cc5fac822bb94f4cbfd00d0f25a8ca51c7fb696f75d59388e1841a
+MISC ChangeLog 1145 SHA256 acd1af82fdabe75f9f532e8dc94d6962c97f5c37666461f27eea7f75281a660c SHA512 c26d2021fa5fd35ba82cc57fb7e38c22c03a347558752d51a2db1689fe15d9bad99a19448f8b1a2643400409bb9049ed37e7a06299586207217d3af7bfbd2376 WHIRLPOOL f95151ca4994bccaac7ff523e4f332774bd1aaf84ed893bc87e747d4b32f13bb918a24bcba363a1d850fcb94ed509c87c2f24925737a85367e53eae4b25796c0
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
